bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_u32.rs
use bitbybit::bitfield;

#[bitfield(u32, default = 0)]
struct Test {
    #[bit(32, rw)]
    field: bool,
}

fn main() {}
