bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_u32.stderr
error: bitfield!: Field field requires 33 bits, but only has (32)
 --> tests/no_compile/invalid_bit_pos/invalid_bit_pos_u32.rs:5:5
  |
5 |     #[bit(32, rw)]
  |     ^^^^^^^^^^^^^^
